@@ -7,6 +7,7 @@ the node hosting the protocol. Modified simulators too to record this info.
 
 fixed bug in GeneralNode with failstate handling
 
-Made NeighborListGraph public
+Made class peersim.graph.NeighborListGraph public
 
+Added class peersim.dynamics.Shuffle
 
